поправила отображение некоторых блоков в мобильной версии

--- a/css/benefits.css
+++ b/css/benefits.css
@@ -111,7 +111,7 @@
     flex-wrap: wrap; }
 
   .benefits__item {
-    width: 248px;
+    width: auto;
     margin: 0 0 20px 0; } }
 
 /*# sourceMappingURL=benefits.css.map */
