--- a/css/partners.css
+++ b/css/partners.css
@@ -83,7 +83,8 @@
 
   .partners__list {
     width: 100%;
-    padding: 0; }
+    padding: 0;
+    justify-content: space-around; }
 
   .partners__link {
     margin: 0 0 20px 0; } }
