--- a/css/features.css
+++ b/css/features.css
@@ -113,10 +113,11 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    justify-content: space-evenly; }
+    justify-content: space-evenly;
+    flex-wrap: wrap; }
 
   .features__item {
-    width: calc(100% / 3);
+    min-width: 135px;
     margin: 0 0 30px 0; } }
 
 /*# sourceMappingURL=features.css.map */
