--- a/css/posts.css
+++ b/css/posts.css
@@ -82,7 +82,6 @@
 
 .posts__wrapper {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   margin: 0 0 40px 0; }
 
@@ -237,6 +236,9 @@
   .posts__text {
     width: 100%;
     box-sizing: border-box; }
+
+  .posts__wrapper {
+    flex-wrap: wrap; }
 
   .post {
     margin: 0 0 20px 0; }
