--- a/scss/features.scss
+++ b/scss/features.scss
@@ -84,10 +84,11 @@
         padding: 0;
         margin: 0;
         justify-content: space-evenly;
+        flex-wrap: wrap;
     }
 
     .features__item {
-        width: calc(100% / 3);
+        min-width: 135px;
         margin: 0 0 30px 0;
     }
 }
