--- a/scss/partners.scss
+++ b/scss/partners.scss
@@ -44,6 +44,7 @@
     .partners__list {
         width: 100%;
         padding: 0;
+        justify-content: space-around;
     }
 
     .partners__link {
